[package]
name = "socks5udp"
version = "0.1.0"
authors = ["Dark Silk"]
description = "UDP proxy to socks5 proxy"
readme = "README.md"
keywords = ["proxy", "udp", "networking"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"

[dependencies]
getopts = "0.2"
rand = "0.3"
